[BUG #6893] qx.Mobile Slider reacts slow on iOS6
* Added iOS6 css bug fix, which prevents flickering on change of CSS transition property changes.

--- a/framework/source/resource/qx/mobile/less/basic/_slider.less
+++ b/framework/source/resource/qx/mobile/less/basic/_slider.less
@@ -3,6 +3,10 @@
 //
 
 .slider {
+  // iOS6 flickering bug fix
+  -webkit-perspective: 1000;
+  -webkit-backface-visibility: hidden;
+
   .background-clip(padding-box);
   position: relative;
   top:6px;
