--- a/framework/source/resource/qx/mobile/less/common/_scroller.less
+++ b/framework/source/resource/qx/mobile/less/common/_scroller.less
@@ -13,6 +13,10 @@
 }
 
 .scrollContainer {
+  // iOS6 flickering bug fix
+  -webkit-perspective: 1000;
+  -webkit-backface-visibility: hidden;
+
   position:relative;
   overflow:hidden;
 }
